--- a/Index.html
+++ b/Index.html
@@ -128,12 +128,13 @@
 
     </main>
 
-
+  <!-- Pie de la Pagina,redes sociales -->
     <footer class="footer">
         <div class="container footer_grid">         
         <section class="footer_contact">
             <p class="footer_title">SÍGUEME EN MIS REDES SOCIALES:</p>
             <div class="footer_icons">
+          <!-- Clases externas fa-brands, fa-whatsapp, fa-facebook,fa-twitter -->
             <span class="footer_container-icons">
                 <a class="fa-brands fa-whatsapp footer_icons" href="https://api.whatsapp.com/send?phone=591760tel:623327583"></a>
             </span>                
@@ -152,7 +153,7 @@
     </footer>
 
 
-<!-- iconos para redes sociales-->
+<!-- iconos para redes sociales y clases externas-->
     <script src="https://kit.fontawesome.com/0beee1a4ae.js" crossorigin="anonymous"></script>
 </body>
 
