--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos.css" >   
 </head>
 <body>  
+  <!-- Menu de interacción  -->
   <nav class="nav">
     <a href="Index.html" target="_blank" class="clase_menu">Inicio</a>               
     <a href="Index.html#sobremi" class="clase_menu">Sobre mí </a>
@@ -19,14 +20,14 @@
 <div class="container">
   <h1 class="titulo_pag">Contacto</h1>
    <br>
-    <div id="contenedor-lef">
+    <div id="contenedor-left"> <!--Contenedor Izquierdo-->
      
       <h3>Tienes algo para decir?</h3>
 
       <p class="c_parafo">A través de este formulario puedes enviarme un mensaje para ayudarme a corregir errores, a mejorar mi blog, o simplemente para decir hola. Cualquier cosa que tengas para decir es bienvenida, así que no lo dudes y déjame un mensaje. Estaré feliz de contestarte!</p>
 
     </div>
-      <div id="contenedor-right">
+      <div id="contenedor-right"> <!--Contenedor Derecho-->
   
       <form action="">
         Tu nombre: <input type="text" name="nombre" class="class-input">
@@ -42,12 +43,13 @@
     </div>
 
 </div>
-<!-- Pie de la Pagina -->
+<!-- Pie de la Pagina,redes sociales -->
 <footer class="footer">
   <div class="container footer_grid">         
   <section class="footer_contact">
       <p class="footer_title">SÍGUEME EN MIS REDES SOCIALES:</p>
       <div class="footer_icons">
+        <!-- Clases externas fa-brands, fa-whatsapp, fa-facebook,fa-twitter -->
       <span class="footer_container-icons">
           <a class="fa-brands fa-whatsapp footer_icons" href="https://api.whatsapp.com/send?phone=591760tel:623327583"></a>
       </span>                
@@ -64,7 +66,7 @@
   </div>
   
 </footer>
-<!-- iconos para redes sociales-->
+<!-- iconos para redes sociales junto con las clases externas-->
 <script src="https://kit.fontawesome.com/0beee1a4ae.js" crossorigin="anonymous"></script>
 
 </body>
